2004-06-07  graydon hoare  <graydon@pobox.com>

	* cryptopp/algebra.cpp:
	* cryptopp/asn.h:
	* cryptopp/hmac.h:
	* cryptopp/iterhash.h:
	* cryptopp/mdc.h:
	* cryptopp/modes.h:
	* cryptopp/osrng.h:
	* cryptopp/pubkey.h:
	* cryptopp/seckey.h:
	* cryptopp/simple.h:
	* cryptopp/smartptr.h:
	* cryptopp/strciphr.cpp:
	* cryptopp/strciphr.h:
	* lcs.hh:
	* lua.cc: Fixes for g++ 3.4 from Michael Scherer.
	* AUTHORS: Mention Michael.

2004-05-28  graydon hoare  <graydon@pobox.com>

	* tests/t_movedel.at: New test.
	* testsuite.at: Call it.
	* diff_patch.cc (adjust_deletes_under_renames): New function.
	(merge3): Use it.

2004-05-27  graydon hoare  <graydon@pobox.com>

	* tests/t_movepatch.at: New test.
	* testsuite.at: Call it.
	* diff_patch.cc (adjust_deltas_under_renames): New function.
	(merge3): Use it.

2004-05-20  graydon hoare  <graydon@pobox.com>

	* NEWS: Note 0.13 release.
	* configure.ac: Bump version number.
	* monotone.spec: Likewise.

2004-05-19  graydon hoare  <graydon@pobox.com>

	* file_io.cc (tilde_expand): Fix fs::path use.

2004-05-18  graydon hoare  <graydon@pobox.com>

	* diff_patch.cc (apply_directory_moves): Fix fs::path use.
	* file_io.cc (write_data_impl): Likewise.
	* packet.cc: Use explicit true/false maps in caches.
	* sanity.cc (dump_buffer): Write to clog (buffered).

2004-05-14  Joel Rosdahl  <joel@rosdahl.net>

        * std_hooks.lua (ignore_file): Quote dots in .svn patterns.
        * monotone.texi: Updated ignore_file hook example.

2004-05-16  graydon hoare  <graydon@pobox.com>

	* keys.cc (get_passphrase): Reimplement.
	* unix/read_password.c: Remove.
	* {unix,win32}/read_password.cc: Add.
	* constants.{hh,cc} (maxpasswd): New constant.
	* Makefile.am: Teach about platform specific stuff.

2004-05-16  graydon hoare  <graydon@pobox.com>

	* diff_patch.cc (merge2): Don't discard files on one side.
	* std_hooks.lua (merge2_xxdiff_cmd): Specify merge filename.

2004-05-12  graydon hoare  <graydon@pobox.com>
