@@ -217,51 +217,6 @@ get_work_path(local_path & w_path)
   L(F("work path is %s\n") % w_path);
 }
 
-/*
- * return true if the existing file checks pass
- *
- * called to see if a potentially destructive operation 
- * on a local file should proceed if the file exists and is not
- * present in the current manifest
- *
- * if the file does not exist return true (proceed)
- * if the file exists and clobbering is enabled return true (proceed)
- * if the file exists and preserving is enabled return false (skip file)
- * otherwise fail with a nasty message
- */
-
-static bool
-check_existing_file(string op, app_state & app, file_path const & path) 
-{
-  bool existing  = file_exists(path);
-  bool clobbered = existing ? app.lua.hook_clobber_existing_file(path)  : false;
-  bool preserved = existing ? app.lua.hook_preserve_existing_file(path) : false;
-
-  // these logs are just for testing!
-
-  P(F("%s checking existing file %s\n") % op % path);
-
-  if (existing)  P(F("%s checking existing file %s: exists\n")    % op % path);
-  if (clobbered) P(F("%s checking existing file %s: clobbered\n") % op % path);
-  if (preserved) P(F("%s checking existing file %s: preserved\n") % op % path);
-
-  // fail if the file exists and is not to be clobbered or preserved
-
-  N(!existing || clobbered || preserved, 
-    F("%s blocked by existing file %s\n") % op % path);
-
-  if (existing && !clobbered && preserved)
-    W(F("%s preserving existing file %s\n") % op % path);
-
-  if (existing && clobbered) 
-    W(F("%S clobbering existing file %s\n") % op % path);
-
-  // indicate that operation should proceed only if the file does not exist
-  // or if clobbering has been configured
-
-  return !existing || clobbered;
-}
-
 static void 
 get_manifest_map(manifest_map & m)
 {
@@ -1240,10 +1195,14 @@ CMD(update, "working copy", "", "update working copy")
   for (set<file_path>::const_iterator i = ps.f_dels.begin();
        i != ps.f_dels.end(); ++i)
     {
-      if (m_old.find(*i) != m_old.end() || check_existing_file("delete", app, *i))
+      if (app.lua.hook_delete_dropped_file(*i))
         {
-	  L(F("deleting %s\n") % (*i));
+	  L(F("deleting dropped file %s\n") % (*i));
 	  delete_file(*i);
+        }
+      else
+        {
+          W(F("preserving dropped file %s\n") % (*i));
         }
     }
 
@@ -1251,22 +1210,43 @@ CMD(update, "working copy", "", "update working copy")
   for (set<patch_move>::const_iterator i = ps.f_moves.begin();
        i != ps.f_moves.end(); ++i)
     {
-      if ((m_old.find(i->path_old) != m_old.end() || check_existing_file("move source", app, i->path_old)) &&
-	  (m_old.find(i->path_new) != m_old.end() || check_existing_file("move target", app, i->path_new)))
-	{
-	  L(F("moving %s -> %s\n") % i->path_old % i->path_new);
-	  make_dir_for(i->path_new);
-	  move_file(i->path_old, i->path_new);
+      if (!file_exists(i->path_new) || app.lua.hook_replace_existing_file(i->path_new))
+        {
+          // boost:filesystem::rename fails if the target exists
+          if (file_exists(i->path_new)) delete_file(i->path_new);
+
+          L(F("moving %s -> %s\n") % i->path_old % i->path_new);
+          make_dir_for(i->path_new);
+          move_file(i->path_old, i->path_new);
+
+          // nb: never keep the move source in this case
 	}
+      else
+        {
+          // target exists and is to be preserved
+          // source is deleted based on delete_dropped_file hook
+
+          if (app.lua.hook_delete_dropped_file(i->path_old))
+            {
+              L(F("deleting move source %s\n") % (i->path_old));
+              delete_file(i->path_old);
+            }
+          else 
+            {
+              W(F("preserving move source %s\n") % i->path_old);
+            }
+        
+	  W(F("preserving move target %s\n") % i->path_new);
+        }
     }
 
   L(F("applying %d additions to tree\n") % ps.f_adds.size());
   for (set<patch_addition>::const_iterator i = ps.f_adds.begin();
        i != ps.f_adds.end(); ++i)
     {
-      if (m_old.find(i->path) != m_old.end() || check_existing_file("add", app, i->path))
-	{
-	  L(F("adding %s as %s\n") % i->ident % i->path);
+      if (!file_exists(i->path) || app.lua.hook_replace_existing_file(i->path))
+        {
+	  P(F("adding %s as %s\n") % i->ident % i->path);
 	  file_data tmp;
 	  if (app.db.file_version_exists(i->ident))
 	    app.db.get_file_version(i->ident, tmp);
@@ -1277,39 +1257,39 @@ CMD(update, "working copy", "", "update working copy")
 
 	  write_localized_data(i->path, tmp.inner(), app.lua);
 	}
+      else
+        {
+	  W(F("preserving added file %s\n") % i->path);
+        }
     }
 
   L(F("applying %d deltas to tree\n") % ps.f_deltas.size());
   for (set<patch_delta>::const_iterator i = ps.f_deltas.begin();
        i != ps.f_deltas.end(); ++i)
     {
-      if (m_old.find(i->path) != m_old.end() || check_existing_file("merge", app, i->path))
-	{
-	  P(F("updating file %s: %s -> %s\n") 
-	    % i->path % i->id_old % i->id_new);
-          
-	  // sanity check
-	  {
-	    base64< gzip<data> > dtmp;
-	    hexenc<id> dtmp_id;
-	    read_localized_data(i->path, dtmp, app.lua);
-	    calculate_ident(dtmp, dtmp_id);
-	    I(dtmp_id == i->id_old.inner());
-	  }
-          
-	  // ok, replace with new version
-	  {
-	    file_data tmp;
-	    if (app.db.file_version_exists(i->id_new))
-	      app.db.get_file_version(i->id_new, tmp);
-	    else if (merger.temporary_store.find(i->id_new) != merger.temporary_store.end())
-	      tmp = merger.temporary_store[i->id_new];
-	    else
-	      I(false); // trip assert. this should be impossible.
-            
-	    write_localized_data(i->path, tmp.inner(), app.lua);
-	  }
-	}
+      P(F("updating file %s: %s -> %s\n") 
+	% i->path % i->id_old % i->id_new);
+
+      // sanity check
+      {
+	base64< gzip<data> > dtmp;
+	hexenc<id> dtmp_id;
+	read_localized_data(i->path, dtmp, app.lua);
+	calculate_ident(dtmp, dtmp_id);
+	I(dtmp_id == i->id_old.inner());
+      }
+
+      // ok, replace with new version
+      {
+	file_data tmp;
+	if (app.db.file_version_exists(i->id_new))
+	  app.db.get_file_version(i->id_new, tmp);
+	else if (merger.temporary_store.find(i->id_new) != merger.temporary_store.end())
+	  tmp = merger.temporary_store[i->id_new];
+	else
+	  I(false); // trip assert. this should be impossible.
+	write_localized_data(i->path, tmp.inner(), app.lua);
+      }
     }
   
   L(F("update successful\n"));
@@ -1547,18 +1527,19 @@ CMD(checkout, "tree", "MANIFEST-ID DIRECTORY\nDIRECTORY", "check out tree state 
 	F("no file version %s found in database for %s")
 	% pip.ident() % pip.path());
 
-      if (check_existing_file("checkout", app, pip.path())) 
+      if (!file_exists(pip.path()) || app.lua.hook_replace_existing_file(pip.path()))
         {
 	  file_data dat;
 
-	  L(F("writing file %s to %s\n") %
-	    pip.ident() % pip.path());
+	  L(F("writing file %s to %s\n") % pip.ident() % pip.path());
 	  app.db.get_file_version(pip.ident(), dat);
 	  write_localized_data(pip.path(), dat.inner(), app.lua);
         }
-
+      else 
+        {
+          W(F("preserving existing file %s\n") % pip.path());
+        }
     }
-
   remove_work_set();
   guard.commit();
   update_any_attrs(app);
