@@ -62,8 +62,10 @@ public:
 
   // local repo hooks
   bool hook_ignore_file(file_path const & p);
-  bool hook_clobber_existing_file(file_path const & p);
-  bool hook_preserve_existing_file(file_path const & p);
+
+  bool hook_delete_dropped_file(file_path const & p);
+  bool hook_replace_existing_file(file_path const & p);
+
   bool hook_get_nonce(std::string & n);
   bool hook_get_sorter(std::string const & certname, std::string & sort_type);
   bool hook_merge2(data const & left, 
