@@ -1,285 +1,181 @@
 #  -*- Autoconf -*-
 
 # Check that update and checkout do the right thing according to the 
-# clobber_existing_file and preserve_existing_file hooks
+# delete_dropped_file and replace_existing_file hooks
 
-# consider splitting this into 3 different tests
-# - t_clobber.at
-# - t_preserve.at
-# - t_fail.at
-
-# for each test we need to test 
-# - update delete 
-#   bogus: delete's don't occur unless file is in current manifest
-#   check is not strictly needed
-# - update move source
-#   bogus: move doesn't occur unless source is in current manifest
-#   check is not strictly needed
-# - update move target
-#   fails in boost
-#   check should be done
-# - update addition
-# - update merge
-#   bogus: merge doesn't occur unless file is in current manifest
-#   check is not strictly needed
-# - checkout
-
-# the problem with 3 tests is that they all need
-# the same database setup!
-
-AT_SETUP([noclobber lua hooks])
+AT_SETUP([noclobber update/checkout lua hooks])
 
 MONOTONE_SETUP
 
-# with these hooks monotone should clobber existing files
+AT_DATA(preserve.lua, [
+function delete_dropped_file(name)   return false end
+function replace_existing_file(name) return false end
+])
 
 AT_DATA(clobber.lua, [
-function clobber_existing_file(name)
-   return true;
-end
-
-function preserve_existing_file(name)
-   return false;
-end
+function delete_dropped_file(name)   return true end
+function replace_existing_file(name) return true end
 ])
 
-# with these hooks monotone should preserve existing files
-
-AT_DATA(preserve.lua, [
-function clobber_existing_file(name)
-   return false;
-end
-
-function preserve_existing_file(name)
-   return true;
-end
+AT_DATA(delete.lua, [
+function delete_dropped_file(name)   return true end
+function replace_existing_file(name) return false end
 ])
 
-# with these hooks monotone should fail if it hits an existing file
-
-AT_DATA(fail.lua, [
-function clobber_existing_file(name)
-   return false;
-end
-
-function preserve_existing_file(name)
-   return false;
-end
+AT_DATA(replace.lua, [
+function delete_dropped_file(name)   return false end
+function replace_existing_file(name) return true end
 ])
+
+# database files
 
 AT_DATA(a, [file a
 ])
-
 AT_DATA(b, [file b
 ])
-
 AT_DATA(c, [file c
 ])
 
-AT_DATA(e, [file e
+# blocking files 
+
+AT_DATA(xa, [file xa
+])
+AT_DATA(xb, [file xb
+])
+AT_DATA(xbb, [file xbb
+])
+AT_DATA(xc, [file xc
 ])
 
-AT_DATA(f, [file f
-])
-
-AT_DATA(x, [existing file
-])
-
-# create files in db
+# first commit
 
 AT_CHECK(MONOTONE add a, [], [ignore], [ignore])
-AT_CHECK(MONOTONE --branch=testbranch commit blah-blah, [], [ignore], [ignore])
-A_M_SHA1=`SHA1(MT/manifest)`
-
 AT_CHECK(MONOTONE add b, [], [ignore], [ignore])
-AT_CHECK(MONOTONE --branch=testbranch commit blah-blah, [], [ignore], [ignore])
-B_M_SHA1=`SHA1(MT/manifest)`
+AT_CHECK(MONOTONE --branch=testbranch commit message, [], [ignore], [ignore])
+M_SHA1=`SHA1(MT/manifest)`
 
+# set up add, rename, drop in second commit
+ 
+AT_CHECK(MONOTONE drop a, [], [ignore], [ignore])
+AT_CHECK(mv b bb)
+AT_CHECK(MONOTONE rename b bb, [], [ignore], [ignore])
 AT_CHECK(MONOTONE add c, [], [ignore], [ignore])
-AT_CHECK(MONOTONE --branch=testbranch commit blah-blah, [], [ignore], [ignore])
-C_M_SHA1=`SHA1(MT/manifest)`
+AT_CHECK(MONOTONE --branch=testbranch commit message, [], [ignore], [ignore])
 
-AT_CHECK(mv c d)
-AT_CHECK(MONOTONE rename c d, [], [ignore], [ignore])
-AT_CHECK(MONOTONE --branch=testbranch commit blah-blah, [], [ignore], [ignore])
-D_M_SHA1=`SHA1(MT/manifest)`
+# create existing modified files 
 
-AT_CHECK(MONOTONE add e, [], [ignore], [ignore])
-AT_CHECK(MONOTONE --branch=testbranch commit blah-blah, [], [ignore], [ignore])
-E_M_SHA1=`SHA1(MT/manifest)`
-
-AT_CHECK(MONOTONE add f, [], [ignore], [ignore])
-AT_CHECK(MONOTONE --branch=testbranch commit blah-blah, [], [ignore], [ignore])
-F_M_SHA1=`SHA1(MT/manifest)`
-
-AT_CHECK(MONOTONE drop e, [], [ignore], [ignore])
-AT_CHECK(MONOTONE --branch=testbranch commit blah-blah, [], [ignore], [ignore])
-E_dropped_M_SHA1=`SHA1(MT/manifest)`
-
-# clobbering checkout
-
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x a)
-AT_CHECK(ls -l, [], [ignore])
-
-AT_CHECK(MONOTONE --rcfile=clobber.lua checkout $A_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-AT_CHECK(grep 'no changes' stdout, [], [ignore])
-AT_CHECK(cmp a x, [1], [ignore])
-
-# clobbering update addition
-
-AT_CHECK(cp x b)
-AT_CHECK(ls -l, [], [ignore])
-
-AT_CHECK(MONOTONE --rcfile=clobber.lua --branch=testbranch update, [], [ignore], [stderr])
-AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-AT_CHECK(grep 'no changes' stdout, [], [ignore])
-AT_CHECK(cmp b x, [1], [ignore])
-
-# clobbering update move source
-# degenerates to clobbering add of source
-
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x c)
-AT_CHECK(ls -l, [], [ignore])
-
-AT_CHECK(MONOTONE --rcfile=clobber.lua checkout $B_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(MONOTONE --rcfile=clobber.lua --branch=testbranch update, [], [ignore], [stderr])
-#AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-#AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-#AT_CHECK(grep 'no changes' stdout, [], [ignore])
-#AT_CHECK(cmp b x, [1], [ignore])
-
-# clobbering update move target
-# degenerates to clobbering add of target if current tree doesn't have move source
-
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x d)
-AT_CHECK(ls -l, [], [ignore])
-
-AT_CHECK(MONOTONE --rcfile=clobber.lua checkout $B_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(MONOTONE --rcfile=clobber.lua --branch=testbranch update, [], [ignore], [stderr])
-#AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-#AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-#AT_CHECK(grep 'no changes' stdout, [], [ignore])
-#AT_CHECK(cmp b x, [1], [ignore])
-
-# clobbering update move target
-# fails to clobber existing target in boost::filesystem::rename because file exists :(
-
-#AT_CHECK(rm -rf MT a b c d e f)
-#AT_CHECK(cp x d)
-#AT_CHECK(ls -l, [], [ignore])
-
-#AT_CHECK(MONOTONE --rcfile=clobber.lua checkout $C_M_SHA1 ., [], [ignore], [stderr])
-#AT_CHECK(MONOTONE --rcfile=clobber.lua --branch=testbranch update, [], [ignore], [stderr])
-
-#AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-#AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-#AT_CHECK(grep 'no changes' stdout, [], [ignore])
-#AT_CHECK(cmp b x, [1], [ignore])
-
-# clobbering update delete case
-# file not in current manifest is not deleted
-
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x e)
-AT_CHECK(ls -l, [], [ignore])
-
-AT_CHECK(MONOTONE --rcfile=clobber.lua checkout $D_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(MONOTONE --rcfile=clobber.lua --branch=testbranch update, [], [ignore], [stderr])
-#AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-AT_CHECK(grep 'no changes' stdout, [], [ignore])
-AT_CHECK(cmp e x, [], [ignore])
-
-# regular delete case
-# should modified files be deleted?
-
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(ls -l, [], [ignore])
-
-AT_CHECK(MONOTONE --rcfile=clobber.lua checkout $E_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(test -e e, [], [ignore])
-AT_CHECK(MONOTONE --rcfile=clobber.lua --branch=testbranch update, [], [ignore], [stderr])
-AT_CHECK(test -e e, [1], [ignore])
-
-# clobbering update merge case seems nonsensical at the moment
-# and seems to be "handled" as a tree layout conflict
+AT_CHECK(cp xa a)
+AT_CHECK(cp xb b)
+AT_CHECK(cp xbb bb)
+AT_CHECK(cp xc c)
 
 # preserving checkout
+# a and b changes are preserved
 
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x a)
-AT_CHECK(ls -l, [], [ignore])
+AT_CHECK(rm -rf MT)
 
-AT_CHECK(MONOTONE --rcfile=preserve.lua checkout $A_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(grep 'preserving' stderr, [], [ignore])
-AT_CHECK(MONOTONE status, [], [stdout], [ignore])
+AT_CHECK(MONOTONE --rcfile=preserve.lua --branch=testbranch checkout $M_SHA1 ., [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
 AT_CHECK(grep 'no changes' stdout, [1], [ignore])
-AT_CHECK(cmp a x, [], [ignore])
+AT_CHECK(cmp a xa, [], [ignore])
+AT_CHECK(cmp b xb, [], [ignore])
 
-# preserving update addition
+# preserving update
+# a is dropped but not deleted
+# b is renamed to bb but not deleted from filesystem
+# bb changes are preserved
+# c is added but changes are preserved
 
-AT_CHECK(cp x b)
-AT_CHECK(ls -l, [], [ignore])
-
-AT_CHECK(MONOTONE --rcfile=preserve.lua --branch=testbranch update, [], [ignore], [stderr])
-AT_CHECK(grep 'preserving' stderr, [], [ignore])
-AT_CHECK(MONOTONE status, [], [stdout], [ignore])
+AT_CHECK(MONOTONE --rcfile=preserve.lua update, [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
 AT_CHECK(grep 'no changes' stdout, [1], [ignore])
-AT_CHECK(cmp b x, [], [ignore])
+AT_CHECK(cmp a xa, [], [ignore])
+AT_CHECK(test -f b, [], [ignore])
+AT_CHECK(cmp b xb, [], [ignore])
+AT_CHECK(cmp bb xbb, [], [ignore])
+AT_CHECK(cmp c xc, [], [ignore])
 
-# preserving update move target
+# clobbering checkout
+# a and b changes are replaced
 
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x d)
-AT_CHECK(ls -l, [], [ignore])
+AT_CHECK(rm -rf MT)
 
-AT_CHECK(MONOTONE --rcfile=preserve.lua checkout $C_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(MONOTONE --rcfile=preserve.lua --branch=testbranch update, [], [ignore], [stderr])
-#AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-#AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-#AT_CHECK(grep 'no changes' stdout, [], [ignore])
-#AT_CHECK(cmp b x, [1], [ignore])
+AT_CHECK(MONOTONE --rcfile=clobber.lua --branch=testbranch checkout $M_SHA1 ., [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
+AT_CHECK(grep 'no changes' stdout, [], [ignore])
+AT_CHECK(cmp a xa, [1], [ignore])
+AT_CHECK(cmp b xb, [1], [ignore])
 
-# failing checkout
+# clobbering update
+# a is dropped and deletedd
+# b is renamed to bb and deleted from filesystem
+# bb changes are replaced
+# c is been added and changes are replaced
 
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x a)
-AT_CHECK(ls -l, [], [ignore])
+AT_CHECK(MONOTONE --rcfile=clobber.lua update, [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
+AT_CHECK(grep 'no changes' stdout, [], [ignore])
+AT_CHECK(test -f a, [1], [ignore])
+AT_CHECK(test -f b, [1], [ignore])
+AT_CHECK(cmp bb xbb, [1], [ignore])
+AT_CHECK(cmp c xc, [1], [ignore])
 
-AT_CHECK(MONOTONE --rcfile=fail.lua checkout $A_M_SHA1 ., [1], [ignore], [stderr])
-AT_CHECK(grep 'blocked' stderr, [], [ignore])
-AT_CHECK(cmp a x, [], [ignore])
+# removing checkout
+# a and b changes are preserved
 
-# failing update addition
+AT_CHECK(cp xa a)
+AT_CHECK(cp xb b)
+AT_CHECK(cp xbb bb)
+AT_CHECK(cp xc c)
+AT_CHECK(rm -rf MT)
 
-AT_CHECK(cp x b)
-AT_CHECK(ls -l, [], [ignore])
+AT_CHECK(MONOTONE --rcfile=delete.lua --branch=testbranch checkout $M_SHA1 ., [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
+AT_CHECK(grep 'no changes' stdout, [1], [ignore])
+AT_CHECK(cmp a xa, [], [ignore])
+AT_CHECK(cmp b xb, [], [ignore])
 
-AT_CHECK(MONOTONE --rcfile=fail.lua --branch=testbranch update, [1], [ignore], [stderr])
-AT_CHECK(grep 'blocked' stderr, [], [ignore])
-AT_CHECK(cmp b x, [], [ignore])
+# removing update
+# a is dropped and deleted
+# b is renamed to bb and deleted from filesystem
+# bb changes are preserved
+# c is added but changes are preserved
 
-# failing update move target
+AT_CHECK(MONOTONE --rcfile=delete.lua update, [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
+AT_CHECK(grep 'no changes' stdout, [1], [ignore])
+AT_CHECK(test -f a, [1], [ignore])
+AT_CHECK(test -f b, [1], [ignore])
+AT_CHECK(cmp bb xbb, [], [ignore])
+AT_CHECK(cmp c xc, [], [ignore])
 
-AT_CHECK(rm -rf MT a b c d e f)
-AT_CHECK(cp x d)
-AT_CHECK(ls -l, [], [ignore])
+# replacing checkout
+# a and b changes are replaced
 
-AT_CHECK(MONOTONE --rcfile=fail.lua checkout $C_M_SHA1 ., [], [ignore], [stderr])
-AT_CHECK(MONOTONE --rcfile=fail.lua --branch=testbranch update, [], [ignore], [stderr])
-#AT_CHECK(grep 'clobbering' stderr, [], [ignore])
-#AT_CHECK(MONOTONE status, [], [stdout], [ignore])
-#AT_CHECK(grep 'no changes' stdout, [], [ignore])
-#AT_CHECK(cmp b x, [1], [ignore])
+AT_CHECK(cp xa a)
+AT_CHECK(cp xb b)
+AT_CHECK(cp xbb bb)
+AT_CHECK(cp xc c)
+AT_CHECK(rm -rf MT)
 
-# fail here so we can see all the details while writing the tests...
+AT_CHECK(MONOTONE --rcfile=replace.lua --branch=testbranch checkout $M_SHA1 ., [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
+AT_CHECK(grep 'no changes' stdout, [], [ignore])
+AT_CHECK(cmp a xa, [1], [ignore])
+AT_CHECK(cmp b xb, [1], [ignore])
 
-AT_CHECK(false, [], [ignore])
+# replacing update
+# a is dropped but not deleted from filesystem
+# b is renamed to bb and effectively deleted from filesystem
+# bb changes are replaced
+# c is added and changes are replaced
+
+AT_CHECK(MONOTONE --rcfile=replace.lua update, [], [ignore], [stderr])
+AT_CHECK(MONOTONE status, [], [stdout], [])
+AT_CHECK(grep 'no changes' stdout, [], [ignore])
+AT_CHECK(test -f a, [], [ignore])
+AT_CHECK(cmp bb xb,  [1], [ignore])
+AT_CHECK(cmp bb xbb, [1], [ignore])
+AT_CHECK(cmp c xc, [1], [ignore])
 
 AT_CLEANUP
